@@ -94,6 +94,11 @@ static inline data_error_t data_classifier_init ( data_classifier_t *this_,
     data_error_t result = DATA_ERROR_NONE;
 
     (*this_).id = id;
+    if ( main_type == DATA_CLASSIFIER_TYPE_DEPRECATED_FEATURE )
+    {
+        main_type = DATA_CLASSIFIER_TYPE_REQUIREMENT;
+        TSLOG_ANOMALY_INT( "Classifier type FEATURE is deprecated. Converted to REQUIREMENT. See id C", id );
+    }
     (*this_).main_type = main_type;
 
     (*this_).stereotype = utf8stringbuf_init( sizeof((*this_).private_stereotype_buffer), (*this_).private_stereotype_buffer );
