@@ -25,8 +25,9 @@ enum data_diagram_type_enum {
     DATA_DIAGRAM_TYPE_UML_STATE_MACHINE_DIAGRAM = 12,
     DATA_DIAGRAM_TYPE_UML_SEQUENCE_DIAGRAM = 13,
     DATA_DIAGRAM_TYPE_UML_COMMUNICATION_DIAGRAM = 14,
-    DATA_DIAGRAM_TYPE_UML_INTERACTION_OVERVIEW_DIAGRAM = 15,
+    DATA_DIAGRAM_TYPE_DEPRECATED_INTERACTION_OVERVIEW_DIAGRAM = 15,  /* deprecated since version 1.25.0 */
     DATA_DIAGRAM_TYPE_UML_TIMING_DIAGRAM = 16,
+    DATA_DIAGRAM_TYPE_INTERACTION_OVERVIEW_DIAGRAM = 17,  /* new since version 1.25.0 */
     DATA_DIAGRAM_TYPE_UML_DEPLOYMENT_DIAGRAM = 30,
     DATA_DIAGRAM_TYPE_UML_COMPONENT_DIAGRAM = 31,
     DATA_DIAGRAM_TYPE_UML_COMPOSITE_STRUCTURE_DIAGRAM = 32,
