@@ -159,6 +159,7 @@
                             <entry><para>* / unconditional features</para></entry>
                             <entry><para></para></entry>
                         </row>
+                        <!--
                         <row>
                             <entry><para>
                                 <mediaobject><imageobject><imagedata fileref="../../gui/source/resources/type_clas_requirement.pdf" width="1cm"/></imageobject>
@@ -169,6 +170,7 @@
                             <entry><para>Represents a group of requirements
                                     </para></entry>
                         </row>
+                        -->
                         <row>
                             <entry><para>
                                 <mediaobject><imageobject><imagedata fileref="../../gui/source/resources/type_clas_requirement.pdf" width="1cm"/></imageobject>
@@ -964,7 +966,7 @@
                                 <imageobject><imagedata fileref="../../gui/source/resources/type_diag_overview.png"/></imageobject></mediaobject>
                                 Interaction Overview Diagram</para></entry>
                             <entry><para>UML</para></entry>
-                            <entry><para>lifelines</para></entry>
+                            <entry><para>unconditional relationships (Scenario)</para></entry>
                             <entry><para>Limitations: There is no link from Diagram-References to referenced Diagrams</para></entry>
                         </row>
                         <row>
